[project]
name = "monthly-double-checker-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "dnspython==2.6.1",
    "idna==3.7",
    "pymongo==4.8.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "tqdm==4.66.4",
    "urllib3==2.2.2",
]
